plugins {
    id 'org.springframework.boot' version '3.3.2'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'java'
    id 'checkstyle'
}

jar {
    enabled = false
}

static def getDate() {
    new Date().format('yyyy.MM')
}

group = 'io.itmca'
version = getDate()

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

ext {
    sentryVersion = '7.12.1'
    jwtVersion = '0.12.6'
}

dependencies {
    // Web
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    // AWS
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.1.1'

    // Security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation "io.jsonwebtoken:jjwt-api:${jwtVersion}"
    runtimeOnly "io.jsonwebtoken:jjwt-impl:${jwtVersion}"
    runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jwtVersion}"
    implementation 'com.nimbusds:nimbus-jose-jwt:9.40'
    implementation "io.sentry:sentry-spring-boot-starter-jakarta:${sentryVersion}"
    implementation "io.sentry:sentry-logback:${sentryVersion}"

    // Data
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly 'com.mysql:mysql-connector-j'

    //	Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'

    // Tool
    compileOnly 'org.projectlombok:lombok:1.18.34'
    annotationProcessor 'org.projectlombok:lombok:1.18.34'
    implementation 'org.json:json:20240303'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'io.github.techgnious:IVCompressor:2.0.2'
    implementation 'org.springframework.boot:spring-boot-starter-aop'

    // Swagger
    implementation 'org.springdoc:springdoc-openapi-ui:1.8.0'
}

tasks.named('test') {
    useJUnitPlatform()
}

processResources {
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
}

task buildZip(type: Zip) {
    from('src/.platform') {
        into '.platform'
    }

    from(bootJar.outputs.files) {
        into "."
    }
    destinationDirectory = layout.buildDirectory.get().asFile
    archiveFileName = project.name + ".zip"
}

checkstyle {
    toolVersion('10.10.0')
    configFile = rootProject.file('checkstyle/checkstyle.xml')
    maxWarnings = 0
}